--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-app",
-  "homepage": "https://kaleighg.github.io/K-portfolio",
+  "homepage": "https://kaleighg.github.io/K-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
